<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.taskmanager.ui.tasks.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks">

        <action
            android:id="@+id/action_tasksFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />

        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />

        <action
            android:id="@+id/action_tasksFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.taskmanager.ui.tasks.AddTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_add_task" />

    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.taskmanager.ui.detail.TaskDetailFragment"
        android:label="@string/task_detail"
        tools:layout="@layout/fragment_task_detail">

        <argument
            android:name="taskId"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.taskmanager.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
